# firebird-uuid

./: .gitignore  .readthedocs.yml  LICENSE  README.md  root.oid
python/: CHANGELOG.md  LICENSE  README.md  README.rst  pyproject.toml  tester.py
python/docs/: changelog.txt  conf.py  index.txt  reference.txt  requirements.txt
python/src/firebird/uuid/: __about__.py  __init__.py  _model.py  _registry.py  _spec.py  model.py  registry.py  spec.py
python/tests/: test_01.py  test_model.py  test_registry.py  test_spec.py
