[build-system]
requires = ["setuptools >= 65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "firebird-uuid"
version = "0.2.0"
description = "Firebird UUID"
readme = "README.rst"
requires-python = ">=3.8, <4"
license = { file = "LICENSE" }
authors = [{ name = "Pavel Cisar", email = "pcisar@users.sourceforge.net"}]
keywords = ["Firebird", "UUID"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    ]
dependencies = [
    "toml>=0.10.2",
    "PyYAML>=6.0, <7",
    "requests>=2.28",
    "firebird-base>=1.5.0",
    ]

[project.urls]
Home = "https://github.com/FirebirdSQL/firebird-uuid"
Documentation = "https://firebird-uuid.rtfd.io"
"Bug Reports" = "https://github.com/FirebirdSQL/firebird-uuid/issues"
Funding = "https://www.firebirdsql.org/en/donate/"
Source = "https://github.com/FirebirdSQL/firebird-uuid"

[tool.setuptools]
zip-safe = true
