[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "firebird-uuid"
dynamic = ["version"]
description = 'Official tools for working with OID namespace managed by the Firebird Project.'
readme = "README.md"
requires-python = ">=3.8, <4"
license = { file = "LICENSE" }
keywords = ["Firebird", "UUID"]
authors = [
  { name = "Pavel Cisar", email = "pcisar@users.sourceforge.net" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "toml>=0.10.2",
  "PyYAML>=6.0.1, <7",
  "requests>=2.31.0",
  "firebird-base>=1.6.1",
]

[project.urls]
Home = "https://github.com/FirebirdSQL/firebird-uuid"
Documentation = "https://firebird-uuid.rtfd.io"
Issues = "https://github.com/FirebirdSQL/firebird-uuid/issues"
Funding = "https://github.com/sponsors/pcisar"
Source = "https://github.com/FirebirdSQL/firebird-uuid/python"

[tool.hatch.version]
path = "src/firebird/uuid/__about__.py"

[tool.hatch.build]
packages = ["src/firebird"]

[tool.hatch.envs.default]
dependencies = [
]

[tool.hatch.envs.test]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.test.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]
version = "python --version"

[[tool.hatch.envs.test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.doc]
detached = false
platforms = ["linux"]
dependencies = [
  "Sphinx>=7.1", 
  "sphinx-bootstrap-theme>=0.8.1", 
  "sphinx-autodoc-typehints>=1.24.0",
]
[tool.hatch.envs.doc.scripts]
build = "cd docs ; make html"

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/firebird/uuid tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py38"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py38"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["firebird.uuid"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["firebird.uuid", "tests"]
branch = true
parallel = true
omit = [
  "src/firebird/uuid/__about__.py",
]

[tool.coverage.paths]
firebird_uuid = ["src/python", "*/python/src/firebird/uuid"]
tests = ["tests", "*/python/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
